@@ -33,11 +33,13 @@ public class SettingsErrors implements Serializable
 
     public final boolean ignore;
     public final int tries;
+    public final boolean skipReadValidation;
 
     public SettingsErrors(Options options)
     {
         ignore = options.ignore.setByUser();
         this.tries = Math.max(1, Integer.parseInt(options.retries.value()) + 1);
+        skipReadValidation = options.skipReadValidation.setByUser();
     }
 
     // Option Declarations
@@ -46,11 +48,11 @@ public class SettingsErrors implements Serializable
     {
         final OptionSimple retries = new OptionSimple("retries=", "[0-9]+", "9", "Number of tries to perform for each operation before failing", false);
         final OptionSimple ignore = new OptionSimple("ignore", "", null, "Do not fail on errors", false);
-
+        final OptionSimple skipReadValidation = new OptionSimple("skip-read-validation", "", null, "Skip read validation and message output", false);
         @Override
         public List<? extends Option> options()
         {
-            return Arrays.asList(retries, ignore);
+            return Arrays.asList(retries, ignore, skipReadValidation);
         }
     }
 
